{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 15,
  "lineage": "b0a9c1e3-a6c7-48c0-5976-2820bc45e772",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0076292d116ba9713",
            "domain": "vpc",
            "id": "eipalloc-0076292d116ba9713",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-21-230-58.compute-1.amazonaws.com",
            "public_ip": "52.21.230.58",
            "public_ipv4_pool": "amazon",
            "tags": {
              "name": "bangalore-nat-eip"
            },
            "tags_all": {
              "name": "bangalore-nat-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632653723581:internet-gateway/igw-0f57bb9f83c82c9cd",
            "id": "igw-0f57bb9f83c82c9cd",
            "owner_id": "632653723581",
            "tags": {
              "name": "bangalore-igw"
            },
            "tags_all": {
              "name": "bangalore-igw"
            },
            "vpc_id": "vpc-069650c71214b58c4"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0076292d116ba9713",
            "association_id": "eipassoc-0814f344f9703fe02",
            "connectivity_type": "public",
            "id": "nat-00c46cd91483905e7",
            "network_interface_id": "eni-07f3b95f2e94255e1",
            "private_ip": "10.0.1.24",
            "public_ip": "52.21.230.58",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a77d5bc2eaef840d",
            "tags": {
              "name": "bangalore-nat"
            },
            "tags_all": {
              "name": "bangalore-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632653723581:route-table/rtb-056cc3c1bf6362b43",
            "id": "rtb-056cc3c1bf6362b43",
            "owner_id": "632653723581",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-00c46cd91483905e7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "bangalore-private-route"
            },
            "tags_all": {
              "name": "bangalore-private-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-069650c71214b58c4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632653723581:route-table/rtb-0f60023bfc85fe398",
            "id": "rtb-0f60023bfc85fe398",
            "owner_id": "632653723581",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f57bb9f83c82c9cd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "bangalore-public-route"
            },
            "tags_all": {
              "name": "bangalore-public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-069650c71214b58c4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ed7f86b912f5359",
            "route_table_id": "rtb-056cc3c1bf6362b43",
            "subnet_id": "subnet-07bd7f6ea11d459b8"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private1",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a7d8a946e836109",
            "route_table_id": "rtb-056cc3c1bf6362b43",
            "subnet_id": "subnet-01715159f682ab44b"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private2",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007cc7878a68ceb47",
            "route_table_id": "rtb-0f60023bfc85fe398",
            "subnet_id": "subnet-0a77d5bc2eaef840d"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040286235f1d62166",
            "route_table_id": "rtb-0f60023bfc85fe398",
            "subnet_id": "subnet-08cc35dbf61696987"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632653723581:subnet/subnet-07bd7f6ea11d459b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07bd7f6ea11d459b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "632653723581",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "bangalore-private-subnet1"
            },
            "tags_all": {
              "name": "bangalore-private-subnet1"
            },
            "vpc_id": "vpc-069650c71214b58c4"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632653723581:subnet/subnet-01715159f682ab44b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01715159f682ab44b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "632653723581",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "bangalore-private-subnet2"
            },
            "tags_all": {
              "name": "bangalore-private-subnet2"
            },
            "vpc_id": "vpc-069650c71214b58c4"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632653723581:subnet/subnet-0a77d5bc2eaef840d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a77d5bc2eaef840d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "632653723581",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "bangalore-public-subnet1"
            },
            "tags_all": {
              "name": "bangalore-public-subnet1"
            },
            "vpc_id": "vpc-069650c71214b58c4"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632653723581:subnet/subnet-08cc35dbf61696987",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08cc35dbf61696987",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "632653723581",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "bangalore-public-subnet2"
            },
            "tags_all": {
              "name": "bangalore-public-subnet2"
            },
            "vpc_id": "vpc-069650c71214b58c4"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632653723581:vpc/vpc-069650c71214b58c4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01460cccef97ea768",
            "default_route_table_id": "rtb-0ddb9b37f9387f9bd",
            "default_security_group_id": "sg-0f3e8953d01bad9ef",
            "dhcp_options_id": "dopt-06a009c85a782a8c7",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-069650c71214b58c4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ddb9b37f9387f9bd",
            "owner_id": "632653723581",
            "tags": {
              "name": "bangalore-vpc"
            },
            "tags_all": {
              "name": "bangalore-vpc"
            }
          }
        }
      ]
    }
  ]
}